--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js"
+    "watch": "node --watch server.js"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
